Modulo de Mapping XML Files Finalizado, comienzo con escritura de PDF con XMLSerializer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,11 @@ dependencies {
 //  For FragmentContainerView y Navigation Component
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
     implementation "androidx.navigation:navigation-ui-ktx:2.3.4"
+    implementation('org.simpleframework:simple-xml:2.7.+'){
+        exclude module: 'stax'
+        exclude module: 'stax-api'
+        exclude module: 'xpp3'
+    }
 
 //  For Zebra Libraries
     implementation fileTree(dir: 'libs', include: ['*.jar'])
